--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,22 @@
 @tailwind utilities;
 
 body {
-    @apply bg-black text-slate-100
+  @apply bg-black text-slate-100;
+
+  overscroll-behavior: none;
+}
+
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
 }
